--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
 
   <input type="hidden" #selection>
   <input type="hidden" #papuga>
+  <input type="hidden" #itemsSuma>
 
   <div class="card-container">
     <button class="card card-small" (click)="selection.value = 'component'" tabindex="0">
@@ -61,4 +62,7 @@
 
 
 
+
+
 <router-outlet></router-outlet>
+<app-sumat></app-sumat>
