--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,15 @@
   <input type="hidden" #papuga>
   <input type="hidden" #itemsSuma>
 
+
+
+  <!-- ////two numbers///// -->
   <div>
-    <p class="text card-container"> Przykład funkcji, która zwraca sumę dwóch liczb</p>
+    <p class="text card-container"> An example of a function that returns the sum of two numbers</p>
   </div>
   <app-sumat/>
 
-
-
-
+  <!-- ////Factorial///// -->
   <div class="card-container">
 
     <button class="card card-small" (click)="papuga.value = 'Simple'" tabindex="0">
@@ -23,7 +24,7 @@
   </div>
 
   <div>
-    <p class="text card-container"> Przykład funkcji, która zwraca Funkcje</p>
+    <p class="text card-container"> Example of a function that returns Factorial</p>
   </div>
 
   <div class="terminal content_consol" [ngSwitch]="papuga.value">
@@ -38,5 +39,8 @@
   </div>
 
 
-  <!-- <router-outlet/> -->
-
+ <!-- ///LargestNumber///// -->
+<div>
+  <p class="text card-container">Function that will return the largest number from the array</p>
+</div>
+<Largest-Number/>
