--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,20 @@
 
 
   <!-- ////two numbers///// -->
+<!-- 
+  <button class="card card-small" (click)="showFactorialExample = true">
+    <span>Pokaż przykład obliczania silni</span>
+  </button>
+
+
+  <div *ngIf="showFactorialExample">
+    <div>
+      <p class="text card-container"> An example of a function that returns the sum of two numbers</p>
+    </div>
+    <app-sumat/>
+  </div> -->
+
+  
   <div>
     <p class="text card-container"> An example of a function that returns the sum of two numbers</p>
   </div>
