--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/scss/app.component.scss';
+@import './app/scss/app.componenttext.scss';
+@import './app/scss/app.componetTerminal.scss';
