--- a/src/app/scss/app.componenttext.scss
+++ b/src/app/scss/app.componenttext.scss
@@ -99,7 +99,7 @@ a:hover {
 
 .text {
     display: flex;
-    font-size: 20px;
+    font-size: 30px;
     justify-content: center;
     align-items: left;
     // height: 100vh;
@@ -109,6 +109,24 @@ a:hover {
 .text p {
     margin: 0;
 }
+
+.textWhite {
+    display: flex;
+    font-size: 50px;
+    justify-content: center;
+    align-items: left;
+    // height: 100vh;
+    color: #fff;
+
+}
+
+.textWhiteContainer {
+    // display: flex;
+    font-size: 30px;
+    align-items: center;
+    color: #fff;
+}
+
 
 .elemtsSpacing {
     display: flex;
