--- a/src/app/scss/app.componetTerminal.scss
+++ b/src/app/scss/app.componetTerminal.scss
@@ -54,6 +54,26 @@
     align-items: left;
 
 }
+.input{
+    display: flex;
+    margin: 82px auto 32px;
+    max-width: 960px;
+    flex-direction: column;
+    align-items: left;
+    width: 80%;
+    max-width: 100px;
+    border-radius: 6px;
+    padding-top: 45px;
+    margin-top: 8px;
+    overflow: hidden;
+    background-color: rgb(15, 15, 16);
+    color: #c2c3c4;
+    font-size: 2rem;
+    overflow: auto;
+    word-wrap: break-word;
+    word-break: break-all;
+
+}
 
 svg.material-icons {
     height: 24px;
