--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div>
-    <a (click)="changeContent('Section 1')">Section 1</a>
-    <a (click)="changeContent('Section 2')">Section 2</a>
+    <a (click)="changeContent('Section 1')">Sect ppp ion 1</a>
+    <a (click)="changeContent('<Largest-Number/>')">Section 2</a>
     <a (click)="changeContent('Section 3')">Section 3</a>
-  </div>
+</div>
   
