--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,23 +19,23 @@
       <span>Factorial</span>
     </button>
   </div>
-  </div>
+</div>
 
 
 <!-- ///Action//// -->
   
-  <div class="terminal content_consol textWhiteContainer" [ngSwitch]="dynamicMenu.value">
+  <div class="" [ngSwitch]="dynamicMenu.value">
 
   <pre *ngSwitchDefault="'suma'">
     <div>
-      <p class="text card-container"> An example of a function that returns the sum of two numbers</p>
+      <p class="text"> An example of a function that returns the sum of two numbers</p>
     </div>
-    <app-sumat class="text card-container"/>
+    <app-sumat class=""/>
   </pre>
 
   <pre *ngSwitchCase="'numbers'">
     <div>
-      <p class="text card-container">Function that will return the largest number from the array</p>
+      <p class="text ">Function that will return the largest number from the array</p>
     </div>
     <Largest-Number/>
   </pre>
