--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -8,10 +8,10 @@
     <div [appDynamicComponent]="dynamicContent"></div>
 </div> -->
 
-<div>
+<!-- <div>
     <h1>{{ sectionTitle }}</h1>
     <ng-container #dynamicComponentContainer></ng-container>
-</div>
+</div> -->
 
 <!-- content.component.html -->
 <!-- <div>
